ops/django-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: django
        tier: frontend
    spec:
      containers:
      - name: django
        image: gcr.io/django-172117/djangodocker:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
