ops/django-manage-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: django-manage
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: django-manage
        tier: frontend
    spec:
      containers:
      - name: django-manage
        image: gcr.io/django-172117/djangodocker-manage:latest
        resources:
          requests:
            cpu: 5m
            memory: 100Mi
        ports:
        - containerPort: 80
