ops/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: nginx
    tier: frontend
